// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with topic areas 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    width="100%"
  >
    <thead>
      <tr>
        <th />
        <th>
          <button
            aria-label="Sort by topic area name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Topic area
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 margin-left-1"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <button
            aria-label="Sort by dashboard name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Dashboards
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-circle-down fa-w-16 margin-left-1"
              data-icon="chevron-circle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM273 369.9l135.5-135.5c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L256 285.1 154.4 183.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L239 369.9c9.4 9.4 24.6 9.4 34 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <button
            aria-label="Sort by created by name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Created by
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 margin-left-1"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <label
            class="usa-sr-only"
            for="abc"
          >
            USWDS
          </label>
          <input
            id="abc"
            type="radio"
          />
        </td>
        <td>
          <span
            class="text-bold text-base-darker font-sans-md"
          >
            USWDS
          </span>
        </td>
        <td>
          <span
            class="font-sans-md"
          >
            1
          </span>
        </td>
        <td>
          <span
            class="font-sans-md"
          >
            johndoe
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders an empty table 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    width="100%"
  >
    <thead>
      <tr>
        <th />
        <th>
          <button
            aria-label="Sort by topic area name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Topic area
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 margin-left-1"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <button
            aria-label="Sort by dashboard name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Dashboards
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-circle-down fa-w-16 margin-left-1"
              data-icon="chevron-circle-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 137-111 248-248 248S8 393 8 256 119 8 256 8s248 111 248 248zM273 369.9l135.5-135.5c9.4-9.4 9.4-24.6 0-33.9l-17-17c-9.4-9.4-24.6-9.4-33.9 0L256 285.1 154.4 183.5c-9.4-9.4-24.6-9.4-33.9 0l-17 17c-9.4 9.4-9.4 24.6 0 33.9L239 369.9c9.4 9.4 24.6 9.4 34 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <button
            aria-label="Sort by created by name"
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-darker font-sans-md text-bold text-no-underline"
          >
            <span>
              Created by
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 margin-left-1"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
